client/styles/takeQuiz.less
/*
 * Take Quiz styles
 * ---------------- */

@max-question-width: 30em;

.quiz-container {
    .make-row();

    .sidebar {
        .make-md-column(3);
        .make-lg-column(2);
    }

    .main {
        .make-md-column(9);
        .make-lg-column(8);
    }

    .quiz-body {

        position: relative;
        border: 1px solid #ddd;
        border-radius: 4px;
        padding: 0 1em;

        @media(min-width:1600px){
            margin-left: 3em;
            margin-right: 3em;
        }

        .question {
            margin-bottom: 2em;
            max-width: @max-question-width;
            line-height: 1.6;
        }

        .submission {
            input {
                display: inline;
                width: 250px;
            }

            input[readonly] { cursor: default; }

            .submit, .next {
                margin: 0 6px;
            }

            .result-container {
                margin-top: 1em;
            }

            .result {
                display: inline-block;
                min-width: 330px;
            }

            .result .incorrect {
                display: block;
                margin-bottom: 0.5em;
            }

            .result .glyphicon {
                margin-right: 4px;
            }
        }
    }

    .header {
        .make-row();

        max-width: @max-question-width;

        // Make room for the sidebar toggle button
        @media(max-width:610px){
            max-width: @max-question-width - 4;
        }

        margin: 1em auto;
        border-bottom: 1px dotted #ccc;
        padding-bottom: 1em;

        .prev,
        .current,
        .next {
            .make-xs-column(4; @gutter: 0);
        }

        .prev { text-align: left; }
        .current { text-align: center; font-weight: bold; }
        .next { text-align: right; }

        a.disabled { color: #999; }
        a.disabled:hover {
            cursor: default;
            text-decoration: none;
        }
    }

    .question-container,
    .summary-container {
        max-width: @max-question-width;
        margin: 3em auto 5.5em;
    }

    .summary-container {
        h3 { margin: 1em 0; }
    }

    .summary-actions {
        margin: 1.5em 0;
    }

    .summary-actions button:not(:last-of-type) {
        margin-right: .25em;
    }

    .score {
        font-weight: bold;
        font-size: 1.3em;
        background: hsl(206, 79%, 97%);
        padding: .1em .7em;
        border: 1px solid #949AB3;
        border-radius: 4px;
    }

    .score-percent {
        margin-left: .5em;
    }
}

#toggle-sidebar {
    position: absolute;
    top: 0;
    left: 0;
    font-size: 24px;
    color: #6C729D;
    padding: 6px;
    border-radius: 0 0 4px 0;
    width: 46px;
    height: 46px;
}

#toggle-sidebar:focus {
    outline: 0;     // Focus outline looks bad on Chrome
}

#quiz-sidebar {

    @media(max-width:991px){
        padding-left: 25px;
        padding-right: 25px;
    }

    .sidebar-question {
        .make-row();
        line-height: 2;

        .question {
            .make-xs-column(11; @gutter: 0);
        }

        .status {
            .make-xs-column(1; @gutter: 0);

            .correct { color: #468847; }
            .incorrect { color: #b94a48; }
        }
    }

    .list-group-item.active, .list-group-item.active:hover, .list-group-item.active:focus {
        background-color: rgba(66, 139, 202, 0.16);
        border-color: #ddd;
        color: black;
    }

    .progress-container {
        .make-row();

        padding: 0;

        .progress {
            .make-xs-column(12; @gutter: 0);
            border-radius: 0;
            margin-bottom: 0;
            position: relative;
        }
    }

    .score-tooltip { text-align: left; }
    .sidebar-summary-row {
        .make-row();
        .summary {
            .make-xs-column(12; @gutter: 0);
            font-weight: bold;
        }
    }
}

